--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         }
     ],
     "require": {
+        "ext-json": "*",
         "php": ">= 7.1",
         "guzzlehttp/guzzle": "~6.0"
     },
