--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "ext-json": "*",
         "php": ">= 7.1",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": ">= 6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16"
