--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     ],
     "require": {
         "ext-json": "*",
-        "php": ">= 7.1",
-        "guzzlehttp/guzzle": ">= 6.0"
+        "php": "^7.1 || ^8.0",
+        "guzzlehttp/guzzle": "^6.0 || ^7.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16"
